Fix callForAction and footer styles on mobile view
Both of these sections had bad alignment and scaling on mobile

--- a/styles.css
+++ b/styles.css
@@ -560,9 +560,15 @@ html, body { /* makes body cover the whole page */
         margin-bottom: auto;
     }
 
-  .infos {
+  .infos, .scrollingimages, .callForAction, .footer {
     width: 100%;
     height: auto;
+    min-height: auto;
+  }
+
+  .scrollingimages, .callForAction {
+    padding-top: 20%;
+    padding-bottom: 20%;
   }
 
   .infocards {
@@ -589,10 +595,53 @@ html, body { /* makes body cover the whole page */
   }
 
 
+  .signupwrapper {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    aspect-ratio: 1 /1;
+  }
+
+  .signupwrapper p {
+    font-size: 1rem;
+    
+  }
+
+  .signupwrapper > :nth-child(1) {
+    flex: 1;
+    margin-top: 5%;
+    
+    
+    
+  }
+
+  .signupwrapper > :nth-child(2) {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    
+  }
+
+
+  .signupwrapper button {
+    height: 30%;
+    font-size: 1.3rem;
+  }
 
 
   .footer {
-    flex-direction: column;;
+
+    flex-direction: column;
+    align-items: center;
+    
+    
+  }
+
+  .newsletter {
+    width: 100%;
+    height: auto;
+    margin: 0;
   }
 
 }
